Alteração de cores do GameArena e correção de ranking

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,10 @@
 
     --sidebar-foreground: 240 5.3% 26.1%;
 
+    --success: 140 91% 65%;
+
+    --success-foreground: 0 0% 8%;
+
     --sidebar-primary: 240 5.9% 10%;
 
     --sidebar-primary-foreground: 0 0% 98%;
